Forms- moved Vendors section down into a tab, updated tab sort order, tweaks to Add Vendor dialog CXAdmin- updated page title to display "CX Admin" instead of "Cx Admin" pages-config- old pages that were deleted (ManageMunicipalityGroups and NewForm partial page) refuse to be deleted Files modified - [pages-config.json,CXAdmin.html,Forms.html]

--- a/src/main/webapp/pages/CXAdmin/CXAdmin.html
+++ b/src/main/webapp/pages/CXAdmin/CXAdmin.html
@@ -1,4 +1,4 @@
-<wm-page data-ng-controller="CXAdminPageController" pagetitle="Cx Admin" name="page1">
+<wm-page data-ng-controller="CXAdminPageController" pagetitle="CX Admin" name="page1">
     <wm-header content="header" name="header1"></wm-header>
     <wm-top-nav content="topnav" name="top_nav1"></wm-top-nav>
     <wm-content name="content1">
